added test - user with TLQ in DLS searches data stream